# parkhub-rust

./: .actrc  .dockerignore  .editorconfig  .env.example  .envrc  .gitignore  .gitleaks.toml  .mise.toml  .pre-commit-config.yaml  .semgrepignore  .trivyignore  .zizmor.yaml  ACTIONS-AUDIT.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE-REPORT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DEVELOPMENT.md  Dockerfile  Justfile  LICENSE-THIRD-PARTY.md  LICENSES.md  Makefile  NOTICE  README.md  SECURITY-AUDIT.md  SECURITY.md  bacon.toml  build.rs  cliff.toml  deny.toml  docker-compose.override.yml.example  docker-compose.test.yml  docker-compose.yml  dprint.json  flake.nix  (+18 more)
.aoe/: config.toml
.cargo/: mutants.toml
.devcontainer/: Containerfile  devcontainer.json
.fop/: image-scan.toml
.forge-operator/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml  release.yml
.nido/: local-ci.toml
.stitch/: DESIGN.md
config/: config.toml  dev-users.json
dev/: SETUP.md
docs/: API.md  CHANGELOG.md  COMPLIANCE.md  CONFIGURATION.md  CONTRIBUTING.md  DOCKER.md  FEATURES.md  GDPR.md  IMPRESSUM-TEMPLATE.md  INSTALLATION.md  PAAS.md  PRIVACY-TEMPLATE.md  SECURITY.md  SLO.md  betriebsvereinbarung-muster.md  deployment-readiness-record.md  legal-readiness-parity.md  legal-readiness.md  local-ci.md  mcp.md  openapi-parity.md  parity-governance.md  recommendation-engine-contract.md  release-checklist.md  v5-test-coverage-plan.md
e2e/: 01-welcome.yaml  02-login.yaml  03-dashboard.yaml  04-admin.yaml  05-login-failure.yaml  a11y.spec.ts  admin-crud-complete.spec.ts  api.spec.ts  booking-edge-cases.spec.ts  concurrent-users.spec.ts  devtools.spec.ts  full-workflow.spec.ts  gdpr.spec.ts  helpers.ts  multi-language.spec.ts  new-features.spec.ts  offline-reconnect.spec.ts  pages.spec.ts  parking.spec.ts  pwa.spec.ts  run.sh  security-flows.spec.ts  v5-happy-paths.spec.ts  v5-helpers.ts  v5-visual.spec.ts  visual.spec.ts
helm/: README.md
legal/: agb-template.md  ai-act-transparency-template.md  avv-template.md  bfsg-barrierefreiheit-template.md  cookie-policy-template.md  datenschutz-template.md  impressum-template.md  vvt-template.md  widerrufsbelehrung-template.md
parkhub-client/: Cargo.toml  build.rs
parkhub-client/src/: discovery.rs  main.rs  server_connection.rs
parkhub-client/ui/: admin.slint  connect.slint  dialogs.slint  history.slint  i18n.slint  icons.slint  layout_editor.slint  login.slint  main.slint  parking.slint  settings.slint  statistics.slint  theme.slint
parkhub-client/ui/components/: button.slint  card.slint
parkhub-common/: Cargo.toml
parkhub-common/src/: error.rs  lib.rs  models.rs  protocol.rs  validation.rs
parkhub-common/tests/: property_roundtrip.rs  protocol_roundtrip.rs  validation_properties.rs
parkhub-desktop/: Cargo.toml  README.md  tauri.conf.json
parkhub-desktop/capabilities/: default.json
parkhub-desktop/src/: lib.rs  main.rs
parkhub-server/: Cargo.toml  build.rs
parkhub-server/fuzz/: Cargo.toml
parkhub-server/fuzz/fuzz_targets/: jwt_parse.rs  webhook_hmac.rs
parkhub-server/src/: api.rs  audit.rs  booking_tests.rs  calendar_tests.rs  circuit_breaker.rs  config.rs  coverage_tests.rs  db.rs  demo.rs  discovery.rs  email.rs  email_templates.rs  error.rs  health.rs  integration_tests.rs  jobs.rs  jwt.rs  lib.rs  main.rs  mcp.rs  metrics.rs  mobile_tests.rs  openapi.rs  rate_limit.rs  requests.rs  sse_events_tests.rs  static_files.rs  tls.rs  utils.rs  validation.rs  webhooks_v2_tests.rs
parkhub-server/src/api/: absence_approval.rs  absences.rs  accessible.rs  admin.rs  admin_analytics.rs  admin_ext.rs  admin_handlers.rs  analytics.rs  announcements.rs  api_docs.rs  audit_export.rs  auth.rs  billing.rs  bookings.rs  branding.rs  calendar.rs  calendar_drag.rs  co2.rs  compliance.rs  credits.rs  data_management.rs  dynamic_pricing.rs  enhanced_pwa.rs  ev_charging.rs  export.rs  fairness.rs  favorites.rs  fleet.rs  geofence.rs  graphql.rs  guest.rs  history.rs  ical_import.rs  import.rs  invoices.rs  lobby.rs  lots.rs  lots_ext.rs  maintenance.rs  map.rs  (+52 more)
parkhub-server/src/api/modules/: gate.rs  handlers.rs  mod.rs  registry.rs  schemas.rs  tests.rs
parkhub-server/src/api/snapshots/: parkhub_server__api__snapshots__snap_openapi_metadata_envelope.snap  parkhub_server__api__snapshots__snap_system_version_shape.snap
parkhub-server/src/bootstrap/: cli.rs  health.rs  mod.rs  paths.rs  revocation.rs  seed.rs  setup_wizard.rs  status_gui.rs  tests.rs
parkhub-server/src/db/: absences.rs  audit_log.rs  bookings.rs  communications.rs  encryption.rs  ev.rs  favorites.rs  invoice_counters.rs  lots.rs  mod.rs  sessions.rs  settings.rs  stripe_events.rs  tests.rs  translations.rs  users.rs  vehicles.rs  visitors.rs
parkhub-server/tests/: ts_export.rs
parkhub-server/ui/: main.slint
parkhub-web/: .gitignore  README.md  astro.config.mjs  biome.json  fix-i18n.mjs  index.html  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vitest.config.browser.ts  vitest.config.ts
scripts/: check-ci-workflow-policy.sh  check-local-ci-report.sh  check-nix-garnix-contract.sh  check-openapi-drift.sh  check-recommendation-contract.sh  check-release-supply-chain-policy.sh  check-types-drift.sh  create-icon.ps1  diff-openapi.sh  docker-entrypoint.sh  dump-openapi.sh  e2e-local.sh  fop-wrap.sh  generate-vex.sh  local-build-trace.sh  local-coverage.sh  local-e2e.sh  local-fuzz-smoke.sh  local-image-scan.sh  local-install-smoke.sh  local-lighthouse.sh  local-mutants.sh  local-release-rehearsal.sh  local-reproducibility-check.sh  local-sbom.sh  local-scorecard.sh  local-visual-regression.sh  local-workflow-drift.sh  post-attestation-deferred.sh  seed_demo.py  seed_demo.sh  simulate_month.py  smoke-test.sh  stitch-generate.sh  v5-design-smoke-local.sh  verify-build.ps1
specs/: README.md
src/: config.rs  layout_storage.rs  main.rs  mock_api.rs
tests/: README.md  main.rs  requirements.txt  run_tests.bat
(+639 files in other folders)
