[workspace]
members = [
    "parkhub-common",
    "parkhub-server",
    "parkhub-client",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["nash87"]
license = "MIT"
repository = "https://github.com/nash87/parkhub-rust"

[workspace.dependencies]
# Shared dependencies across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }

# Database - Pure Rust embedded database
redb = "2"  # 3.x exists but major API changes — evaluate separately

# Encryption utilities (for application-level encryption)
aes-gcm = "0.10"  # 0.11 is RC only
pbkdf2 = { version = "0.12", features = ["simple"] }  # 0.13 is RC only
sha2 = "0.10"
rand = "0.9"  # updated from 0.8
zeroize = { version = "1", features = ["derive"] }

# HTTP/API
axum = { version = "0.8", features = ["tokio", "json"] }  # updated from 0.7
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }  # 0.13 exists but may break

# Security
rcgen = "0.14"  # updated from 0.13
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
argon2 = { version = "0.5", features = ["std", "rand"] }  # 0.6 is RC only

# Network discovery
mdns-sd = "0.18"  # updated from 0.11

# Internal crates
parkhub-common = { path = "parkhub-common" }

[profile.release]
lto = "thin"
codegen-units = 4
strip = true
opt-level = 3
