[workspace]
members = [
    "parkhub-common",
    "parkhub-server",
    "parkhub-client",
]
resolver = "2"

[workspace.package]
version = "3.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["nash87"]
license = "MIT"
repository = "https://github.com/nash87/parkhub-rust"

[workspace.dependencies]
# Shared dependencies across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }

# Database - Pure Rust embedded database
redb = "2"  # 3.x exists but major API changes — evaluate separately

# Encryption utilities (for application-level encryption)
aes-gcm = "0.10"  # 0.11 is RC only
pbkdf2 = { version = "0.12", features = ["simple"] }  # 0.13 is RC only
sha2 = "0.10"
rand = "0.9"  # updated from 0.8
zeroize = { version = "1", features = ["derive"] }

# TOTP (2FA)
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }

# HTTP/API
axum = { version = "0.8", features = ["tokio", "json", "ws"] }  # updated from 0.7
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "compression-gzip", "compression-br", "request-id", "propagate-header"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }  # 0.13 exists but may break

# Security
rcgen = "0.14"  # updated from 0.13
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
argon2 = { version = "0.5", features = ["std", "rand"] }  # 0.6 is RC only

# Network discovery
mdns-sd = "0.18"  # updated from 0.11

# Internal crates
parkhub-common = { path = "parkhub-common" }

[workspace.lints.clippy]
# Enforce pedantic quality — no warnings allowed
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow specific pedantic lints that are too noisy or inapplicable
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_docs_in_private_items = "allow"
doc_markdown = "allow"
# Large function bodies are OK for HTTP handlers
too_many_lines = "allow"
# Struct bools are fine for config/request DTOs
struct_excessive_bools = "allow"
# Option<Option<T>> is valid for optional-with-explicit-null semantics
option_option = "allow"
# Allow cast precision loss for stats/percentages
cast_precision_loss = "allow"
# Allow similar names in large handler files
similar_names = "allow"
# Nursery lint: RwLock guards held until function return is standard in async handlers
significant_drop_tightening = "allow"
# Generated by utoipa derive macro — cannot be fixed in source
needless_for_each = "allow"
# Rust 1.94+ pedantic: many format! calls use function returns (Uuid::new_v4(), etc.)
uninlined_format_args = "allow"
# Rust 1.94+ pedantic: "".to_string() vs String::new() is stylistic
manual_string_new = "allow"
# Rust 1.94+ pedantic: raw string r#"..."# hashes — used in HTML/email templates
needless_raw_string_hashes = "allow"
# Rust 1.94+ pedantic: long numeric literals (DXA units, ports) without separators
unreadable_literal = "allow"
# Rust 1.94+ pedantic: f64 assert_eq in tests — acceptable for exact computed values
float_cmp = "allow"
# Rust 1.94+ pedantic: hardcoded "0.0.0.0" / "127.0.0.1" for server bind addresses
ip_constant = "allow"
# Rust 1.94+ nursery: .clone() on values moving into closures
redundant_clone = "allow"
# Rust 1.94+ pedantic: .iter() in for loops vs direct reference
explicit_iter_loop = "allow"
# Rust 1.94+ nursery: collect() into Vec before iteration
needless_collect = "allow"

[workspace.lints.rust]
unsafe_code = "deny"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
