[package]
name = "parkhub-common"
description = "Shared types and API definitions for ParkHub"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
utoipa = { version = "5", features = ["chrono", "uuid"] }

[dev-dependencies]
# Property-based round-trip tests for DTOs and enums. Pinned to a stable
# release; only pulled in for `cargo test`, never in the release binary.
proptest = "1.8"
