[package]
name = "parkhub-server"
description = "ParkHub Server - Database and API server with LAN autodiscovery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "parkhub-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
parkhub-common.workspace = true

# Async runtime
tokio.workspace = true

# Database - Pure Rust embedded with app-level encryption
redb.workspace = true
aes-gcm.workspace = true
pbkdf2.workspace = true
sha2.workspace = true
rand.workspace = true
zeroize.workspace = true
hex = "0.4"

# HTTP API
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
futures-util = "0.3"

# Serialization
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true

# Security - TLS certificates
rcgen.workspace = true
rustls.workspace = true
argon2 = { version = "0.5", features = ["std", "rand"] }
rand_core = { version = "0.9", features = ["os_rng"] }  # updated from 0.6; getrandom renamed to os_rng in 0.9
axum-server = { version = "0.8", features = ["tls-rustls"] }  # updated from 0.7 (matches axum 0.8)

# Network discovery (mDNS/DNS-SD)
mdns-sd.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Config
toml = "1.0"
directories = "6"
hostname = "0.4"

# Email — SMTP transport for password-reset and notification emails
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }

# Crypto for certificate fingerprints
ring = "0.17"

# === PHASE 1: Stabilization ===
# Input validation
validator = { version = "0.20", features = ["derive"] }  # updated from 0.18

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }  # updated from 8

# === PHASE 2: Production Ready ===
# JWT Authentication
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Rate limiting
tower_governor = "0.8"  # updated from 0.4
governor = "0.10"  # updated from 0.7

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"  # updated from 0.16

# Health checks
axum-extra = { version = "0.12", features = ["typed-header", "cookie"] }  # updated from 0.9 (matches axum 0.8)

# === PHASE 3: Features ===
# Background jobs (for cleanup, notifications)
tokio-cron-scheduler = "0.15"  # updated from 0.13

# UI for server onboarding (optional, can be disabled)
slint = { version = "1.15", default-features = false, features = [
    "backend-winit", "renderer-femtovg", "renderer-software", "compat-1-2"
], optional = true }  # updated from 1.14

# System tray support
tray-icon = { version = "0.21", optional = true }
once_cell = "1.21.3"
reqwest.workspace = true
hmac = "0.12"
url = "2"
base64 = "0.22"
totp-rs = { workspace = true }
regex = "1.12.3"
rust-embed = "8.11.0"
mime_guess = "2.0.5"

# QR code generation
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
subtle = "2.6.1"

# PDF generation (invoices)
printpdf = "0.8"

[build-dependencies]
slint-build = { version = "1.15", optional = true }  # updated from 1.14

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi"
] }

[features]
default = ["gui", "full"]
full = [
    "mod-bookings", "mod-vehicles", "mod-absences", "mod-branding",
    "mod-import", "mod-qr", "mod-pwa", "mod-payments", "mod-webhooks",
    "mod-notifications", "mod-announcements", "mod-recurring",
    "mod-guest", "mod-calendar", "mod-team", "mod-settings",
    "mod-jobs", "mod-swap", "mod-waitlist", "mod-zones", "mod-credits",
    "mod-email", "mod-export", "mod-favorites", "mod-push",
    "mod-recommendations", "mod-translations", "mod-social",
    "mod-themes", "mod-oauth", "mod-invoices", "mod-dynamic-pricing",
    "mod-operating-hours", "mod-websocket", "mod-lobby-display",
    "mod-setup-wizard",
    "mod-analytics",
    "mod-email-templates",
    "mod-map",
    "mod-stripe",
    "mod-ical",
    "mod-multi-tenant",
    "mod-data-import",
    "mod-fleet",
    "mod-accessible",
    "mod-maintenance",
    "mod-cost-center",
    "mod-visitors",
    "mod-ev-charging",
    "mod-history",
    "mod-geofence",
    "mod-waitlist-ext",
    "mod-parking-pass",
    "mod-api-docs",
    "mod-absence-approval",
    "mod-calendar-drag",
    "mod-widgets",
    "mod-plugins",
    "mod-graphql",
    "mod-compliance",
    "mod-sharing",
    "mod-scheduled-reports",
    "mod-api-versioning",
    "mod-sso",
    "mod-webhooks-v2",
    "mod-enhanced-pwa",
    "mod-rbac",
]
gui = ["slint", "slint-build", "tray-icon"]
headless = []
mod-bookings = []
mod-vehicles = []
mod-absences = []
mod-branding = []
mod-import = []
mod-qr = []
mod-pwa = []
mod-payments = []
mod-webhooks = []
mod-notifications = []
mod-announcements = []
mod-recurring = []
mod-guest = []
mod-calendar = []
mod-team = []
mod-settings = []
mod-jobs = []
mod-swap = []
mod-waitlist = []
mod-zones = []
mod-credits = []
mod-email = []
mod-export = []
mod-favorites = []
mod-push = []
mod-recommendations = []
mod-translations = []
mod-social = []
mod-themes = []
mod-oauth = []
mod-invoices = []
mod-dynamic-pricing = []
mod-operating-hours = []
mod-websocket = []
mod-lobby-display = []
mod-setup-wizard = []
mod-analytics = []
mod-email-templates = []
mod-map = []
mod-data-import = []
mod-fleet = []
mod-stripe = []
mod-ical = []
mod-multi-tenant = []
mod-accessible = []
mod-maintenance = []
mod-cost-center = []
mod-visitors = []
mod-ev-charging = []
mod-history = []
mod-geofence = []
mod-waitlist-ext = []
mod-parking-pass = []
mod-api-docs = []
mod-absence-approval = []
mod-calendar-drag = []
mod-widgets = []
mod-plugins = []
mod-graphql = []
mod-compliance = []
mod-sharing = []
mod-scheduled-reports = []
mod-api-versioning = []
mod-sso = []
mod-webhooks-v2 = []
mod-enhanced-pwa = []
mod-rbac = []

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
