[package]
name = "parkhub-server"
description = "ParkHub Server - Database and API server with LAN autodiscovery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "parkhub-server"
path = "src/main.rs"

# Library target is fuzz-only. See src/lib.rs — it exposes the `fuzz_api`
# module behind the off-by-default `fuzzing` feature so cargo-fuzz targets can
# link against a stable, minimal mirror of the JWT decode and webhook HMAC
# verification paths. No production consumer should depend on this lib.
[lib]
name = "parkhub_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
parkhub-common.workspace = true

# Async runtime
tokio.workspace = true

# Database - Pure Rust embedded with app-level encryption
redb.workspace = true
aes-gcm.workspace = true
pbkdf2.workspace = true
sha2.workspace = true
rand.workspace = true
zeroize.workspace = true
hex = "0.4"

# HTTP API
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
futures-util = "0.3"
# T-1946: SSE streams for /api/v1/events/fleet
async-stream = "0.3"

# Serialization
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true

# Security - TLS certificates
rcgen.workspace = true
rustls.workspace = true
argon2 = { version = "0.5", features = ["std", "rand"] }
rand_core = "0.10"  # updated from 0.9; no feature flags in 0.10
axum-server = { version = "0.8", features = ["tls-rustls"] }  # updated from 0.7 (matches axum 0.8)

# Network discovery (mDNS/DNS-SD)
mdns-sd.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Config
toml = "1.0"
directories = "6"
hostname = "0.4"

# Email — SMTP transport for password-reset and notification emails
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }

# Crypto for certificate fingerprints
ring = "0.17"

# === PHASE 1: Stabilization ===
# Input validation
validator = { version = "0.20", features = ["derive"] }  # updated from 0.18

# JSON Schema validation — T-1720 v3: per-module admin config editor.
# Crate-local (only parkhub-server needs it). Draft 2020-12 compliant, no
# transitive network deps (default features disabled to skip the `resolve-http`
# / `resolve-file` retrievers we don't want in a local-only server).
jsonschema = { version = "0.46", default-features = false }

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }  # updated from 8

# === PHASE 2: Production Ready ===
# JWT Authentication
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
async-trait = "0.1"  # erased async trait methods for RevocationStore

# Optional Redis-backed revocation list (see feature `redis-revocation` below).
# Gated behind an off-by-default feature so single-replica deploys keep the
# zero-dep in-memory default.
redis = { version = "1", default-features = false, features = ["tokio-comp", "connection-manager"], optional = true }

# Rate limiting
tower_governor = "0.8"  # updated from 0.4
governor = "0.10"  # updated from 0.7
# In-memory map for per-identity rate limiter store (keyed off user_id or api_key_id)
dashmap = "6"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"  # updated from 0.16

# Health checks
axum-extra = { version = "0.12", features = ["typed-header", "cookie"] }  # updated from 0.9 (matches axum 0.8)

# === PHASE 3: Features ===
# Background jobs (for cleanup, notifications)
tokio-cron-scheduler = "0.15"  # updated from 0.13

# UI for server onboarding (optional, can be disabled)
slint = { version = "1.15", default-features = false, features = [
    "backend-winit", "renderer-femtovg", "renderer-software", "compat-1-2"
], optional = true }  # updated from 1.14

# System tray support
tray-icon = { version = "0.22", optional = true }
once_cell = "1.21.3"
reqwest.workspace = true
hmac = "0.12"
url = "2"
base64 = "0.22"
totp-rs = { workspace = true }
regex = "1.12.3"
rust-embed = "8.11.0"
mime_guess = "2.0.5"

# QR code generation
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
subtle = "2.6.1"

# PDF generation (invoices)
# We only use the core PDF drawing APIs, not the optional HTML pipeline.
# Keeping default-features off avoids the stale `kuchiki/html5ever/phf`
# dependency chain that still pulls vulnerable `rand 0.7.x`.
printpdf = { version = "0.9", default-features = false }
web-push = { version = "0.11", features = ["hyper-client"] }

[build-dependencies]
slint-build = { version = "1.15", optional = true }  # updated from 1.14

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# macOS universal build cross-compiles x86_64 on an arm64 runner, where
# Homebrew's openssl@3 is arm64-only and the linker refuses to mix archs.
# Pulling in openssl-sys with `vendored` forces build.rs to compile OpenSSL
# from source for each target architecture — Linux is unaffected because
# the distro pkg-config path still wins when the env var isn't set.
[target.'cfg(target_os = "macos")'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi"
] }

[features]
default = ["headless"]
full = [
    "mod-bookings", "mod-vehicles", "mod-absences", "mod-branding",
    "mod-import", "mod-qr", "mod-pwa", "mod-payments", "mod-webhooks",
    "mod-notifications", "mod-announcements", "mod-recurring",
    "mod-guest", "mod-calendar", "mod-team", "mod-settings",
    "mod-jobs", "mod-swap", "mod-waitlist", "mod-zones", "mod-credits",
    "mod-email", "mod-export", "mod-favorites", "mod-push",
    "mod-recommendations", "mod-translations", "mod-social",
    "mod-themes", "mod-oauth", "mod-invoices", "mod-dynamic-pricing",
    "mod-operating-hours", "mod-websocket", "mod-lobby-display",
    "mod-setup-wizard",
    "mod-analytics",
    "mod-email-templates",
    "mod-map",
    "mod-stripe",
    "mod-ical",
    "mod-multi-tenant",
    "mod-data-import",
    "mod-fleet",
    "mod-accessible",
    "mod-maintenance",
    "mod-cost-center",
    "mod-visitors",
    "mod-ev-charging",
    "mod-history",
    "mod-geofence",
    "mod-waitlist-ext",
    "mod-parking-pass",
    "mod-api-docs",
    "mod-absence-approval",
    "mod-calendar-drag",
    "mod-widgets",
    "mod-plugins",
    "mod-graphql",
    "mod-compliance",
    "mod-sharing",
    "mod-scheduled-reports",
    "mod-api-versioning",
    "mod-sso",
    "mod-webhooks-v2",
    "mod-enhanced-pwa",
    "mod-rbac",
    "mod-audit-export",
    "mod-parking-zones",
    "mod-notification-center",
    "mod-mobile",
    "mod-admin-analytics",
]
gui = ["slint", "slint-build", "tray-icon"]
headless = ["full"]
# Opt-in compile-time bypass for rate limits — enabled ONLY by E2E / nightly CI
# builds, never in production Docker images or release binaries.
# When disabled, PARKHUB_DISABLE_RATE_LIMITS is ignored and its presence at
# startup panics so a misconfigured production deployment fails loudly.
e2e-bypass = []
# Off by default: switches the JWT revocation list from an in-memory HashMap
# (fine for single-replica) to a shared Redis backend (required for multi-
# replica deploys so logouts and theft-response family revocations propagate).
# When enabled, `PARKHUB_REDIS_URL` MUST be set at startup or the server panics
# early. Default builds (single binary, no Redis) are unaffected.
redis-revocation = ["dep:redis"]
# Off by default: enables `src/lib.rs::fuzz_api` for cargo-fuzz harnesses.
# Production builds NEVER enable this — see `fuzz/` for consumers.
fuzzing = []
mod-bookings = []
mod-vehicles = []
mod-absences = []
mod-branding = []
mod-import = []
mod-qr = []
mod-pwa = []
mod-payments = []
mod-webhooks = []
mod-notifications = []
mod-announcements = []
mod-recurring = []
mod-guest = []
mod-calendar = []
mod-team = []
mod-settings = []
mod-jobs = []
mod-swap = []
mod-waitlist = []
mod-zones = []
mod-credits = []
mod-email = []
mod-export = []
mod-favorites = []
mod-push = []
mod-recommendations = []
mod-translations = []
mod-social = []
mod-themes = []
mod-oauth = []
mod-invoices = []
mod-dynamic-pricing = []
mod-operating-hours = []
mod-websocket = []
mod-lobby-display = []
mod-setup-wizard = []
mod-analytics = []
mod-email-templates = []
mod-map = []
mod-data-import = []
mod-fleet = []
mod-stripe = []
mod-ical = []
mod-multi-tenant = []
mod-accessible = []
mod-maintenance = []
mod-cost-center = []
mod-visitors = []
mod-ev-charging = []
mod-history = []
mod-geofence = []
mod-waitlist-ext = []
mod-parking-pass = []
mod-api-docs = []
mod-absence-approval = []
mod-calendar-drag = []
mod-widgets = []
mod-plugins = []
mod-graphql = []
mod-compliance = []
mod-sharing = []
mod-scheduled-reports = []
mod-api-versioning = []
mod-sso = []
mod-webhooks-v2 = []
mod-enhanced-pwa = []
mod-rbac = []
mod-audit-export = []
mod-parking-zones = []
mod-notification-center = []
mod-mobile = []
mod-admin-analytics = []

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
# insta — snapshot testing for stable handler responses (T-1734). Snapshots
# live alongside the source in `src/api/snapshots/` as *.snap files and are
# committed; *.snap.new is gitignored (`cargo insta review` locally before
# accepting). JSON feature enables `assert_json_snapshot!` with inline
# redactions for non-deterministic fields (timestamps, UUIDs, versions).
insta = { version = "1", features = ["json", "redactions"] }
# Integration test dependencies (used by ../tests/main.rs)
reqwest = { version = "0.13", features = ["json", "form", "rustls"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }

[[test]]
name = "integration"
path = "../tests/main.rs"
harness = true
